<?xml version="1.0" encoding="utf-8"?>
<!--
『Androidアプリ開発の教科書』
第14章
暗黙的インテントサンプル

@author Shinzo SAITO

res/values/string.xmlファイル
-->
<resources>
	<string name="app_name">暗黙的インテントサンプル</string>
	<string name="bt_map_search">地図検索</string>
	<string name="tv_current_title">現在地</string>
	<string name="tv_latitude_title">緯度:</string>
	<string name="tv_longitude_title">経度:</string>
	<string name="bt_map_current">地図表示</string>
</resources>
